--- a/refs.bib
+++ b/refs.bib
@@ -25,6 +25,108 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{wang2020,
+       author = {{Wang}, Mike (Shengbo) and {Beutler}, Florian and {Bacon}, David},
+        title = "{Impact of relativistic effects on the primordial non-Gaussianity signature in the large-scale clustering of quasars}",
+      journal = {\mnras},
+     keywords = {cosmological parameters, large-scale structure of Universe, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = dec,
+       volume = {499},
+       number = {2},
+        pages = {2598-2607},
+          doi = {10.1093/mnras/staa2998},
+archivePrefix = {arXiv},
+       eprint = {2007.01802},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.499.2598W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{castorina2020JCAP,
+       author = {{Castorina}, Emanuele and {Moradinezhad Dizgah}, Azadeh},
+        title = "{Local Primordial Non-Gaussianities and super-sample variance}",
+      journal = {\jcap},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = oct,
+       volume = {2020},
+       number = {10},
+          eid = {007},
+        pages = {007},
+          doi = {10.1088/1475-7516/2020/10/007},
+archivePrefix = {arXiv},
+       eprint = {2005.14677},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020JCAP...10..007C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Padmanabhan2007,
+       author = {{Padmanabhan}, Nikhil and {Schlegel}, David J. and {Seljak}, Uro{\v{s}} and {Makarov}, Alexey and {Bahcall}, Neta A. and {Blanton}, Michael R. and {Brinkmann}, Jonathan and {Eisenstein}, Daniel J. and {Finkbeiner}, Douglas P. and {Gunn}, James E. and {Hogg}, David W. and {Ivezi{\'c}}, {\v{Z}}eljko and {Knapp}, Gillian R. and {Loveday}, Jon and {Lupton}, Robert H. and {Nichol}, Robert C. and {Schneider}, Donald P. and {Strauss}, Michael A. and {Tegmark}, Max and {York}, Donald G.},
+        title = "{The clustering of luminous red galaxies in the Sloan Digital Sky Survey imaging data}",
+      journal = {\mnras},
+     keywords = {cosmological parameters, cosmology: observations, distance scale, large-scale structure of Universe, Astrophysics},
+         year = 2007,
+        month = jul,
+       volume = {378},
+       number = {3},
+        pages = {852-872},
+          doi = {10.1111/j.1365-2966.2007.11593.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0605302},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007MNRAS.378..852P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
+@ARTICLE{bouwens2015ApJ,
+       author = {{Bouwens}, R.~J. and {Illingworth}, G.~D. and {Oesch}, P.~A. and {Trenti}, M. and {Labb{\'e}}, I. and {Bradley}, L. and {Carollo}, M. and {van Dokkum}, P.~G. and {Gonzalez}, V. and {Holwerda}, B. and {Franx}, M. and {Spitler}, L. and {Smit}, R. and {Magee}, D.},
+        title = "{UV Luminosity Functions at Redshifts z {\ensuremath{\sim}} 4 to z {\ensuremath{\sim}} 10: 10,000 Galaxies from HST Legacy Fields}",
+      journal = {\apj},
+     keywords = {galaxies: evolution, galaxies: high-redshift, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2015,
+        month = apr,
+       volume = {803},
+       number = {1},
+          eid = {34},
+        pages = {34},
+          doi = {10.1088/0004-637X/803/1/34},
+archivePrefix = {arXiv},
+       eprint = {1403.4295},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...803...34B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{sabti2021JCAP,
+       author = {{Sabti}, Nashwan and {Mu{\~n}oz}, Julian B. and {Blas}, Diego},
+        title = "{First constraints on small-scale non-Gaussianity from UV galaxy luminosity functions}",
+      journal = {\jcap},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, High Energy Physics - Phenomenology},
+         year = 2021,
+        month = jan,
+       volume = {2021},
+       number = {1},
+          eid = {010},
+        pages = {010},
+          doi = {10.1088/1475-7516/2021/01/010},
+archivePrefix = {arXiv},
+       eprint = {2009.01245},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021JCAP...01..010S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
 @article{Xavier_2016,
 	doi = {10.1093/mnras/stw874},
